test/corpus/chat0/user_message.test
==================
user message
:language(qwen_chatml)
==================
<|im_start|>user
What is the color of the sky?<|im_end|>
---
(source_file
  (message
    (im_start)
    role: (role_name) 
    contents: (text)
    (im_end)))

; BTW, :InspectTree in the (input) node is a great way to check expectations!
