test/corpus/fim_file_level/file_level.test
==================
file level FIM
:language(qwen_chatml)
==================
<|fim_prefix|>local M = {}

function M.add(a, b)
    return a + b
end

function M.sub(a, b)
    return b
end

<|fim_suffix|>

return M<|fim_middle|>function M.mul(a, b)
    return a * b
end
---
(source_file
  (fim_completed_file
    (fim_prefix)
    prefix_contents: (text)
    (fim_suffix)
    suffix_contents: (text)
    (fim_middle)
    middle_contents: (text)))
