test/corpus/fim_file_level/no_prefix.test
==================
no prefix in file level FIM
:language(qwen_chatml)
==================
<|fim_prefix|><|fim_suffix|>

return M<|fim_middle|>
---
(source_file
  (fim_file
    (fim_prefix)
    (fim_suffix)
    suffix_contents: (text)
    (fim_middle)))
