test/corpus/fim_file_level/no_suffix.test
==================
no suffix in file level FIM
:language(qwen_chatml)
==================
<|fim_prefix|>local M = {}

function M.add(a, b)
    return a + b
end

function M.sub(a, b)
    return b
end

<|fim_suffix|><|fim_middle|>
---
(source_file
  (fim_file
    (fim_prefix)
    prefix_contents: (text)
    (fim_suffix)
    (fim_middle)))
