test/corpus/fim_file_level/prompt.test
==================
prompt (file-level FIM)
:language(qwen_chatml)
==================
<|fim_prefix|>local M = {}

function M.add(a, b)
    return a + b
end

function M.sub(a, b)
    return b
end

<|fim_suffix|>

return M<|fim_middle|>
---
(source_file
  (fim_file
    (fim_prefix)
    prefix_contents: (text)
    (fim_suffix)
    suffix_contents: (text)
    (fim_middle)))
