test/corpus/messages/chat.test
==================
user message
:language(qwen_chatml)
==================
<|im_start|>system
Answer the question<|im_end|>
<|im_start|>user
What is the color of the sky?<|im_end|>
<|im_start|>assistant
The sky is blue.<|im_end|>
---
(source_file
  (message
    (im_start)
    role: (role_name) 
    contents: (text)
    (im_end)))
