test/corpus/messages/question_answer.test
==================
user message
:language(qwen_chatml)
==================
<|im_start|>assistant
The sky is blue!<|im_end|>
---
(source_file
  (message
    (im_start)
    role: (role_name) 
    contents: (text)
    (im_end)))
